--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "echarts-for-react": "^3.0.2",
     "next": "13.4.12",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "xlsx": "^0.18.5"
+  },
+  "devDependencies": {
+    "@types/xlsx": "^0.0.36"
   }
 }
