--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@uiw/react-baidu-map": "^2.6.1",
     "echarts": "^5.4.3",
     "echarts-for-react": "^3.0.2",
+    "leaflet": "^1.9.4",
     "next": "13.4.12",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
